--- a/defines.css
+++ b/defines.css
@@ -1,14 +1,9 @@
-@font-face {
-	font-family: "Source Sans Pro";
-	src: url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap');
-	font-weight: 200;
-}
-
 :root {
-	--rpifontsans: 'Trade Gothic', Arial, sans-serif;
-	--rpifontserif: 'Janson Text', Georgia, serif;
-	--sspfont: 'Source Sans Pro', sans-serif;
-	--rpired: #D6001C;
-	--rpigrey: #777676;
-	--rpinavy: #333366;
+    --rpifontsans: 'Trade Gothic', Arial, sans-serif;
+    --rpifontserif: 'Janson Text', Georgia, serif;
+    --sspfont: 'Source Sans Pro', sans-serif;
+    --rpired: #D6001C;
+    --rpidarkred: #990000;
+    --rpigrey: #777676;
+    --rpinavy: #333366;
 }
