--- a/src/defines/defines.scss
+++ b/src/defines/defines.scss
@@ -1,9 +1,3 @@
-@font-face {
-    font-family: "Source Sans Pro";
-    src: url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap');
-    font-weight: 200;
-}
-
 $rpifontsans: 'Trade Gothic',
 Arial,
 sans-serif;
@@ -13,6 +7,7 @@ serif;
 $sspfont: 'Source Sans Pro',
 sans-serif;
 $rpired: #D6001C;
+$rpidarkred: #990000;
 $rpigrey: #777676;
 $rpinavy: #333366;
 
