--- a/src/site_map.scss
+++ b/src/site_map.scss
@@ -1,4 +1,4 @@
-@import "defines.scss";
+@import "defines/defines.scss";
 
 /* Show/Hide Details */
 div.pagebodydiv>form[action^="/rss/twbksite.P_DispSiteMap?menu_name_in=bmenu.P_MainMnu"] {
