--- a/src/emergency_contacts.scss
+++ b/src/emergency_contacts.scss
@@ -1,4 +1,4 @@
-@import "defines/defines.scss";
+@import "_defines.scss";
 
 /* Link formatting */
 table.datadisplaytable[summary="This table shows emergency contacts."]>tbody>tr>td:nth-child(2)>a {
